--- a/config/audio-text/validate_lora.yaml
+++ b/config/audio-text/validate_lora.yaml
@@ -28,13 +28,14 @@ resume_training: False
 # pt_ckpt: 'whisper_taigi_small/step-78000-cer=0.1811-wer=0.6140.ckpt'
 # pt_ckpt: 'trans_asr_taigi/step-176000-cer_at=0.1584.ckpt'
 train_id: hermes_asr_taigi
-# LREC_2026/Hermes/models/checkpoints/hermes_asr_taigi_add_adapters_282_all_hiddens/step-17000-cer_student=0.1839.ckpt
+# LREC_2026/Hermes/models/checkpoints/hermes_asr_taigi_sdmmkd_like_unfreeze_student_encoder_without_pooling/step-01000-cer_student=0.1873.ckpt
 transasr_ckpt: 'trans_asr_taigi/step-176000-cer_at=0.1584.ckpt'
-student_ckpt: 'hermes_asr_taigi_add_adapters_282_all_hiddens/step-17000-cer_student=0.1839.ckpt'
-kd_alpha: 1.0
-kd_beta: 0.5
-kd_gamma: 0.5
-kd_temp: 2.0
+student_ckpt: 'hermes_asr_taigi_sdmmkd_like_unfreeze_student_encoder_without_pooling/step-01000-cer_student=0.1873.ckpt'
+alpha: 0.8
+beta: 0.2
+gamma: 0.2
+temp: 0.2
+label_smoothing: 0.1
 
 # text
 add_gated_x_attn: 1 # 0 for False, 1 for True
